changes as of 12/12 @ 6:54PM; added some styling to museum container, need to fix overflow, should be ready for first deploy

--- a/src/App.css
+++ b/src/App.css
@@ -602,13 +602,19 @@
   margin: 5px;
 }
 
+.mediumDetail {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .artDetailsTabOne {
   background-color: gold;
   
   position: fixed;
   width: 420px;
-  height: 180px;
-  margin-top: 50px;
+  height: 190px;
+  margin-top: 30px;
   margin-left: 570px;
 }
 
@@ -617,8 +623,8 @@
 
   position: fixed;
   width: 425px;
-  height: 180px;
-  margin-top: 50px;
+  height: 190px;
+  margin-top: 30px;
   margin-left: 970px;
 }
 
